--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,12 @@ body {
 }
 
 /* FIN RESET */
+main {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
 
 h1 {
     margin: 3rem;
