--- a/styles/index.css
+++ b/styles/index.css
@@ -10,7 +10,7 @@ html {
 
 body {
         font-size: 1.6rem;
-        border: 1rem solid rgb(255, 94, 94);
+        font-family: Arial, Helvetica, sans-serif;
         margin: 0 auto;
 }
 
@@ -27,16 +27,10 @@ justify-content: center;
 margin: 0 auto;
 padding: 3rem 8rem;
 border-radius: 3rem;
-}
-
-section {
-    background-color:  rgb(252, 127, 127);
-    margin: 1rem auto;
-    padding: 1rem 3rem;
+font-size: 2rem;
 }
 
 h1 {
-
     font-family: "Teko", sans-serif;
     font-size: 4em;
     max-width: 30rem;
