--- a/styles/styleflexbox.css
+++ b/styles/styleflexbox.css
@@ -7,11 +7,13 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(189, 187, 188);
+    background-color: transparent;
     color:black;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: 1rem solid rgb(233, 198, 0);
+    max-width: 1024px; 
 }
 
 .subtitulo{
@@ -20,7 +22,7 @@ body {
 .Listas {
     margin-top: 15px;
     padding: 15px;
-    background-color: #f3f3f3;
+    background-color:white;
     border-radius: 8px;
     border: 1px solid #ccc;
 
@@ -36,7 +38,9 @@ body {
     padding: 20px;
     margin:20px;
     border: 1px solid #ddd;
-    box-shadow: 0px 4px 6px black;}
+    box-shadow: 0px 4px 6px black;
+    background-color: rgb(255, 253, 157)
+}
 
 
 .Ejemplo-row{
