--- a/styles/background.css
+++ b/styles/background.css
@@ -1,48 +1,15 @@
 /* RESET */
 
-body{
-
-   
-     background-color: white;
+body{ font-family: Verdana, Geneva, Tahoma, sans-serif;
+background-color:pink;
 }
 
+h2{font-family: fantasy;}
 
-
-
-.bcolor{
-   
-    background-color: #ff4433; /* color hexadecimal*/
- 
-    background-color: rgba (99, 110, 114, 0.5);
-    background-color: hsl(22, 100%, 63%);
-   
-}
-
-.bcolor-solido{
-    background-color: pink; /* color sólido*/
-}
-
-.bcolor-rgb{
-    background-color: rgb(255, 0, 0);
-}
-
-.red-box{width: 10rem;
-    height: 10rem;
-    background-color: red;
-
-}
-
-img rgb{
-    width: 10rem;
-    height: 10rem;
-}
-
-img size{width: 10rem;
-    height: 10rem;
-
-}
-
-img position{
-    width: 3rem;
-    height: 3rem;
-}
+section{ padding: 10rem;
+    margin: 5rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+background-color: #ddd;
+ justify-content: center;
+line-height: 10rem auto;}
