--- a/styles/styleflexbox.css
+++ b/styles/styleflexbox.css
@@ -88,7 +88,6 @@ body {
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    justify-content: center;
     justify-content: flex-start;}
     
 .Ejemplo-center{
@@ -137,8 +136,36 @@ body {
     border: 1px solid #ddd;
     border-radius: 5px;
     }
+.Ejemplo-flex-start-vertical{
+    display: flex;
+    margin: 10px 0;
+    gap: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    align-items: flex-start;}
+
+.Ejemplo-center-vertical{
+    display: flex;
+    margin: 10px 0;
+    gap: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    align-items: center;}
     
-.Ejemplo-stretch{
+.Ejemplo-flex-end-vertical{
+    display: flex;
+    margin: 10px 0;
+    gap: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    align-items:flex-end;
+}
+    
+    
+.Ejemplo-stretch-vertical{
     display: flex;
     align-items: stretch;
     height: 200px;
@@ -148,7 +175,7 @@ body {
     border: 1px solid #ddd;
     border-radius: 5px; }
 
- .Ejemplo-baseline{
+ .Ejemplo-baseline-vertical{
     display: flex;
     align-items: baseline;
     margin: 10px 0;
@@ -202,6 +229,7 @@ body {
     border-radius: 5px;
     text-align: center;
     width: 100px;
+    height: 80px;
     font-weight: bold;
     }
 
